--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -10,7 +10,16 @@
 <div>
     <%= post.location %>
 </div>
-<div><a href="/posts/<%= post.id %>/edit"><button>Edit</button></a></div>
+<div>
+    <% post.images.forEach(function(image) { %>
+        <img src="<%= image.url %>" alt="Surf board image" width="200px">
+        <% }); %>
+</div>
+<div>
+    <a href="/posts/<%= post.id %>/edit">
+        <button>Edit</button>
+    </a>
+</div>
 <div>
     <form action="/posts/<%= post.id %>?_method=DELETE" method="POST">
         <input type="submit" value="Delete">
