--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,3 +1,37 @@
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js"></script>
+<link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css" rel="stylesheet" />
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+    }
+    
+    #map {
+        width: 350px;
+        height: 200px;
+    }
+    
+    .marker {
+        background-image: url("/images/mapbox-icon.png");
+        background-size: cover;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    
+    .mapboxgl-popup {
+        max-width: 200px;
+    }
+    
+    .mapboxgl-popup-content {
+        text-align: center;
+        font-family: "Open Sans", sans-serif;
+    }
+</style>
+
 <h1>
     <%= post.title %>
 </h1>
@@ -12,9 +46,10 @@
 </div>
 <div>
     <% post.images.forEach(function(image) { %>
-        <img src="<%= image.url %>" alt="Surf board image" width="200px">
+        <img src="<%= image.url %>" alt="Surf board image" width="200px" />
         <% }); %>
 </div>
+<div id="map"></div>
 <div>
     <a href="/posts/<%= post.id %>/edit">
         <button>Edit</button>
@@ -22,6 +57,31 @@
 </div>
 <div>
     <form action="/posts/<%= post.id %>?_method=DELETE" method="POST">
-        <input type="submit" value="Delete">
+        <input type="submit" value="Delete" />
     </form>
 </div>
+
+<script>
+    var post = <%- JSON.stringify(post) %>;
+    mapboxgl.accessToken = 'pk.eyJ1Ijoia2Vuamk2MyIsImEiOiJjazIyaWZ2bjIwbGNoM29uMGZ0dHptMDYzIn0.POQ4A8OW4hggYZHrbL0EzA';
+
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/light-v9',
+        center: post.coordinates,
+        zoom: 5
+    });
+
+    // create a HTML element for our post location/marker
+    var el = document.createElement('div');
+    el.className = 'marker';
+
+    // make a marker for our location and add to the map
+    new mapboxgl.Marker(el)
+        .setLngLat(post.coordinates)
+        .setPopup(new mapboxgl.Popup({
+                offset: 25
+            }) // add popups
+            .setHTML('<h3>' + post.title + '</h3><p>' + post.location + '</p>'))
+        .addTo(map);
+</script>
