--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,19 +1,20 @@
-<h1>Posts Index!</h1>
+<% layout('layouts/boilerplate') -%>
+    <h1>Posts Index!</h1>
 
-<% posts.forEach(function(post) { %>
-    <div>
-        <h2>
-            <%= post.title %>
-        </h2>
-        <div>Price:
-            <%= post.price %>
-        </div>
+    <% posts.forEach(function(post) { %>
         <div>
-            <%= post.description %>
+            <h2>
+                <%= post.title %>
+            </h2>
+            <div>Price:
+                <%= post.price %>
+            </div>
+            <div>
+                <%= post.description %>
+            </div>
+            <div>
+                <%= post.location %>
+            </div>
+            <div><a href="/posts/<%= post.id %>">View more</a></div>
         </div>
-        <div>
-            <%= post.location %>
-        </div>
-        <div><a href="/posts/<%= post.id %>">View more</a></div>
-    </div>
-    <% }); %>
+        <% }); %>
