--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,13 +1,14 @@
-<h1>New Post!</h1>
+<% layout('layouts/boilerplate') -%>
+    <h1>New Post!</h1>
 
-<form action="/posts" method="POST" enctype="multipart/form-data">
-    <div><input type="text" name="post[title]" placeholder="Title"></div>
-    <div><input type="text" name="post[price]" placeholder="Price"></div>
-    <div>
-        <input type="file" accept="images/*" name="images" multiple />
-    </div>
-    <div><textarea name="post[description]" placeholder="Description"></textarea></div>
-    <div><input type="text" name="post[location]" placeholder="Location"></div>
+    <form action="/posts" method="POST" enctype="multipart/form-data">
+        <div><input type="text" name="post[title]" placeholder="Title"></div>
+        <div><input type="text" name="post[price]" placeholder="Price"></div>
+        <div>
+            <input type="file" accept="images/*" name="images" multiple />
+        </div>
+        <div><textarea name="post[description]" placeholder="Description"></textarea></div>
+        <div><input type="text" name="post[location]" placeholder="Location"></div>
 
-    <input type="submit">
-</form>
+        <input type="submit">
+    </form>
