Add Flash Message

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,7 +10,8 @@
 
 <body>
     <% include ../partials/navbar %>
-        <%- body -%>
+        <% include ../partials/flash-messages %>
+            <%- body -%>
 </body>
 
 </html>
