--- a/views/layouts/post-show-layout.ejs
+++ b/views/layouts/post-show-layout.ejs
@@ -14,11 +14,12 @@
 
 <body>
     <% include ../partials/navbar %>
-        <%- body -%>
-            <script>
-                var post = <%- JSON.stringify(post) %>;
-            </script>
-            <script src="/javascripts/post-show.js"></script>
+        <% include ../partials/flash-messages %>
+            <%- body -%>
+                <script>
+                    var post = <%- JSON.stringify(post) %>;
+                </script>
+                <script src="/javascripts/post-show.js"></script>
 </body>
 
 </html>
