Add review author / populate reviews -> populate author from the user model to post

--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -40,9 +40,11 @@
     <!-- display all reviews -->
     <% post.reviews.forEach(function(review){ %>
         <div>
-            <%= review.body%>
+            Author:
+            <%= review.author.username%><br>
+                <%= review.body%>
+                    Rating:
+                    <%= review.rating%>
         </div>
-        Rating:
-        <%= review.rating%>
-
-            <% }) %>
+        <hr>
+        <% }) %>
