--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -42,9 +42,26 @@
         <div>
             Author:
             <%= review.author.username%><br>
-                <%= review.body%>
-                    Rating:
+                <%= review.body%><br> Rating:
                     <%= review.rating%>
+
+        </div>
+        <div>
+            <button class="toggle-edit-form">Edit</button>
+            <form action="/posts/<%= post.id %>/reviews/<%= review._id %>/?_method=PUT" method="POST" class="edit-review-form">
+                <textarea name="review[body]" required><%= review.body %></textarea>
+                <input type="number" name="review[rating]" min="1" max="5" step="1" required value="<%= review.rating %>">
+                <input type="submit" value="Update">
+            </form>
         </div>
         <hr>
         <% }) %>
+
+            <script>
+                $('.toggle-edit-form').click(function() {
+                    // toggle the edit button text on click 
+                    $(this).text() === 'Edit' ? $(this).text('Cancer') : $(this).text('Edit');
+                    // toggle visibility of the edit review form
+                    $(this).siblings('.edit-review-form').toggle();
+                })
+            </script>
