--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -46,13 +46,15 @@
                     <%= review.rating%>
 
         </div>
-        <div>
-            <button class="toggle-edit-form">Edit</button>
-            <form action="/posts/<%= post.id %>/reviews/<%= review._id %>/?_method=PUT" method="POST" class="edit-review-form">
-                <textarea name="review[body]" required><%= review.body %></textarea>
-                <input type="number" name="review[rating]" min="1" max="5" step="1" required value="<%= review.rating %>">
-                <input type="submit" value="Update">
-            </form>
-        </div>
-        <hr>
-        <% }) %>
+        <% if(review.author.equals(currentUser._id)){%>
+            <div>
+                <button class="toggle-edit-form">Edit</button>
+                <form action="/posts/<%= post.id %>/reviews/<%= review._id %>/?_method=PUT" method="POST" class="edit-review-form">
+                    <textarea name="review[body]" required><%= review.body %></textarea>
+                    <input type="number" name="review[rating]" min="1" max="5" step="1" required value="<%= review.rating %>">
+                    <input type="submit" value="Update">
+                </form>
+            </div>
+            <% } %>
+                <hr>
+                <% }) %>
