--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,3 +5,12 @@
     <p>Welcome to
         <%= title %>
     </p>
+    <div id='map'></div>
+
+    <script>
+        mapboxgl.accessToken = "<%= mapBoxToken %>";
+        var posts = {
+            features: <%- JSON.stringify(posts) %>
+        };
+    </script>
+    <script src="/javascripts/allPostsClusterMap.js"></script>
