--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') -%>
     <h1>Posts Index!</h1>
+    <div id="map"></div>
 
     <% include ../partials/paginatePosts %>
 
@@ -22,3 +23,11 @@
             <% }); %>
 
                 <% include ../partials/paginatePosts %>
+
+                    <script>
+                        mapboxgl.accessToken = "<%= mapBoxToken %>";
+                        var posts = {
+                            features: <%- JSON.stringify(posts.docs) %>
+                        };
+                    </script>
+                    <script src="/javascripts/allPostsClusterMap.js"></script>
